# mteam-mcp

./: .env_example  .gitignore  LICENSE  PUBLISHING.md  README.md  pyproject.toml  requirements.txt  server.py
.github/workflows/: python-publish.yml
mcp_server_mteam/: __init__.py  __main__.py  server.py
mteam_mcp/: __init__.py  __main__.py  server.py
